--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 
             <div class="form-group">
                 <label for="itemValorUnitario">Valor Unitário do Rolo (R$):</label>
-                <input type="number" id="itemValorUnitario" step="0.01" min="0" placeholder="R$ 0,00">
+                <input type="text" id="itemValorUnitario" placeholder="R$ 0,00">
             </div>
 
             <div class="modal-actions">
@@ -820,24 +820,20 @@
     }
 
     // Inicialização quando a página carrega
-document.addEventListener('DOMContentLoaded', function() {
+  document.addEventListener('DOMContentLoaded', function() {
     updateItemsTable();
-    // Definir data atual
     document.getElementById('dataEmissao').value = new Date().toISOString().split('T')[0];
-    });
-    document
-      .getElementById('itemValorUnitario')
-      .addEventListener('input', function(e) {
-        // remove tudo que não for dígito
-        let digits = e.target.value.replace(/\D/g, '');
-        // converte em número e ajusta duas casas decimais
-        let number = parseInt(digits || '0', 10) / 100;
-        // formata no padrão pt-BR com "R$"
-        e.target.value = number.toLocaleString('pt-BR', {
-          style: 'currency',
-          currency: 'BRL'
-        });
+
+    // aqui entra o listener de formatação
+    const campoValor = document.getElementById('itemValorUnitario');
+    campoValor.addEventListener('input', function(e) {
+      let digits = e.target.value.replace(/\D/g, '');
+      let number = parseInt(digits || '0', 10) / 100;
+      e.target.value = number.toLocaleString('pt-BR', {
+        style: 'currency',
+        currency: 'BRL'
       });
+    });
   });
 </script>
 </body>
