--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 
             <div class="form-group">
                 <label for="itemValorUnitario">Valor Unitário do Rolo (R$):</label>
-                <input type="text" id="itemValorUnitario" placeholder="R$ 0,00" inputmode="decimal">
+                <input type="number" id="itemValorUnitario" step="0.01" min="0" placeholder="R$ 0,00">
             </div>
 
             <div class="modal-actions">
@@ -761,40 +761,12 @@
         const medidaAdesivo = document.getElementById('itemMedidaAdesivo').value;
         const impressao = document.getElementById('itemImpressao').value;
         const metroRolo = document.getElementById('itemMetroRolo').value;
-function addItem() {
-  const quantidade = parseFloat(document.getElementById('itemQtd').value);
-  const produto    = document.getElementById('itemProduto').value;
+        const valorUnitario = parseFloat(document.getElementById('itemValorUnitario').value);
 
-  // _Passo 1:_ pega a string formatada, ex: "R$ 12,34"
-  let raw = document.getElementById('itemValorUnitario').value;
-
-  // _Passo 2:_ remove tudo que não for dígito ou vírgula, trocando vírgula por ponto
-  raw = raw
-    .replace(/[R\$\s\.]/g, '')  // tira "R", "$", espaços e pontos de milhar
-    .replace(/,/g, '.');        // transforma vírgula decimal em ponto
-
-  // _Passo 3:_ converte para número
-  const valorUnitario = parseFloat(raw) || 0;
-
-  if (!quantidade || !produto || valorUnitario <= 0) {
-    alert('Por favor, preencha pelo menos a quantidade, produto e valor unitário.');
-    return;
-  }
-
-  // resto do seu código...
-  items.push({
-    quantidade,
-    unidade: document.getElementById('itemUnidade').value,
-    produto,
-    medidaAdesivo: document.getElementById('itemMedidaAdesivo').value,
-    impressao:     document.getElementById('itemImpressao').value,
-    metroRolo:     document.getElementById('itemMetroRolo').value,
-    valorUnitario // agora é número válido
-  });
-  updateItemsTable();
-  closeItemModal();
-}
-
+        if (!quantidade || !produto || !valorUnitario) {
+            alert('Por favor, preencha pelo menos a quantidade, produto e valor unitário.');
+            return;
+        }
 
         const item = {
             quantidade: quantidade,
@@ -853,23 +825,7 @@ function addItem() {
         // Definir data atual
         document.getElementById('dataEmissao').value = new Date().toISOString().split('T')[0];
     });
-  document.addEventListener('DOMContentLoaded', function() {
-    // ... seu código de inicialização já existente ...
 
-    // formata “R$ 0,00” enquanto digita
-    const campo = document.getElementById('itemValorUnitario');
-    campo.addEventListener('input', e => {
-      // remove tudo que não for dígito
-      let d = e.target.value.replace(/\D/g, '');
-      // transforma em número com duas casas decimais
-      let n = parseInt(d || '0', 10) / 100;
-      // formata no padrão BRL
-      e.target.value = n.toLocaleString('pt-BR', {
-        style: 'currency',
-        currency: 'BRL'
-      });
-    });
-  });
 </script>
 </body>
 </html>
