--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                                 <input type="text" id="cnpj" name="cf_cnpj" placeholder="00.000.000/0000-00" maxlength="18">
                                 <!-- hidden para enviar também ao campo “Empresa” no CRM -->
                                 <input type="hidden"
-                                       id="65e5fb49eaf2aa0019569415"
-                                       name="custom_fields[65e5fb49eaf2aa0019569415]"
+                                       id="CNPJ"
+                                       name="65e5fb49eaf2aa0019569415"
                                        value="">
                             </div>
                             <div>
