--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h1>Emissão de Pedido - PSR Indústria</h1>
         </div>
         <div class="form-content">
-            <form id="pedidoForm" class="rd-form" autocomplete="off">
+            <form id="pedidoForm" class="rd-form" data-rdstation-form="552fc004-6b96-4465-944a-c4f5c4132f83">
                 <!-- Representante Comercial -->
                 <div class="section">
                     <div class="form-group">
@@ -293,6 +293,13 @@
     <script>
         let items = [];
 
+        // Evita envios múltiplos
+        document.getElementById('pedidoForm').addEventListener('submit', function(e) {
+            var btn = this.querySelector('[type="submit"]');
+            if (btn) btn.disabled = true;
+            setTimeout(() => { if (btn) btn.disabled = false; }, 5000);
+        });
+
         // Máscara CNPJ
         document.getElementById('cnpj').addEventListener('input', function(e) {
             let v = e.target.value.replace(/\D/g,'').slice(0,14);
@@ -456,43 +463,9 @@
             updateItemsTable();
             document.getElementById('dataEmissao').value = new Date().toISOString().split('T')[0];
         });
-
-        // SUBMISSÃO PARA APPS SCRIPT - COMPLETO PARA TODOS OS CAMPOS
-        document.getElementById('pedidoForm').addEventListener('submit', async function(e) {
-            e.preventDefault();
-
-            const data = {
-                representante: document.getElementById('representante').value,
-                company_name: document.getElementById('cliente').value,
-                pedidoCompra: document.getElementById('pedidoCompra').value,
-                telefone: document.getElementById('telefone').value,
-                cnpj: document.getElementById('cnpj').value,
-                email: document.getElementById('email').value,
-                dataEmissao: document.getElementById('dataEmissao').value,
-                condicoesPagamento: document.getElementById('condicoesPagamento').value,
-                observacoes: document.getElementById('observacoes').value,
-                pedidos: JSON.stringify(items) // Salva todos os itens do pedido como JSON
-            };
-
-            try {
-                const response = await fetch('https://script.google.com/macros/s/AKfycbzN6dJulwMeZCPPCgBhbEYL9TewWz0Gs6C_9jp1WkK8gpmA4gNn7AAAb0wEAto7TR35Fw/exec', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(data)
-                });
-                const result = await response.json();
-                if (result.success) {
-                    alert('Contato e empresa vinculados com sucesso! Pedido registrado.');
-                    document.getElementById('pedidoForm').reset();
-                    items = [];
-                    updateItemsTable();
-                } else {
-                    alert('Erro: ' + (result.error || 'Tente novamente.'));
-                }
-            } catch (err) {
-                alert('Erro ao enviar formulário: ' + err.message);
-            }
-        });
     </script>
+
+    <!-- RD Station Loader -->
+    <script async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/552fc004-6b96-4465-944a-c4f5c4132f83-loader.js"></script>
 </body>
 </html>
