--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Pedido - PSR Etiquetas</title>
     <style>
+        /* ... (todo o seu CSS aqui, mantive igual ao seu) ... */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -309,29 +310,18 @@
             else if (v.length > 2) v = v.replace(/^(\d{2})(\d{0,3}).*/, "$1.$2");
             e.target.value = v;
         });
-// Busca automática do nome do cliente pelo CNPJ ao sair do campo CNPJ
-document.getElementById('cnpj').addEventListener('blur', function(e) {
-    let cnpj = e.target.value.replace(/\D/g, '');
-    if (cnpj.length === 14) {
-        fetch('https://script.google.com/macros/s/AKfycbwOrDOHxDa1h93hrA1WrF69tHSIUWmeBN8YbwbphUdB8nb1YysWbs41tWQDwl3sy5JHug/exec?cnpj=' + cnpj)
-            .then(res => res.text())
-            .then(nome => {
-                document.getElementById('cliente').value = nome || '';
-            });
-    }
-});
 
 // Busca automática do nome do cliente pelo CNPJ
-document.getElementById('cnpj').addEventListener('blur', function(e) {
-    let cnpj = e.target.value.replace(/\D/g, '');
-    if (cnpj.length === 14) {
-        fetch('https://script.google.com/macros/s/AKfycbwOrDOHxDa1h93hrA1WrF69tHSIUWmeBN8YbwbphUdB8nb1YysWbs41tWQDwl3sy5JHug/exec?cnpj=' + cnpj)
-            .then(res => res.text())
-            .then(nome => {
-                document.getElementById('cliente').value = nome || '';
-            });
-    }
-});
+        document.getElementById('cnpj').addEventListener('blur', function(e) {
+            let cnpj = e.target.value.replace(/\D/g, '');
+            if (cnpj.length === 14) {
+                fetch('https://script.google.com/macros/s/AKfycbwOrDOHxDa1h93hrA1WrF69tHSIUWmeBN8YbwbphUdB8nb1YysWbs41tWQDwl3sy5JHug/exec?cnpj=' + cnpj)
+                    .then(res => res.text())
+                    .then(nome => {
+                        document.getElementById('cliente').value = nome || '';
+                    });
+            }
+        });
         // Exibe/Oculta 'Detalhes' conforme Impressão
         document.getElementById('itemImpressao').addEventListener('change', function() {
             const detalhesGroup = document.getElementById('itemDetalhesGroup');
